try to fix fonts/ add href- :tel and :email

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                         <li><span>Звоните, мы работаем</span></li>
                     </ul>
                     <div class="navbar_item-phones">
-                        <span class="iconify" data-icon="icomoon-free:phone"></span><span>8 (937) 366-07-85</span>
-                        <span class="iconify" data-icon="icomoon-free:phone"></span><span>8 (917) 406-54-02 </span>
+                        <span class="iconify" data-icon="icomoon-free:phone"></span><span><a href="tel:+89373660785">8 (937) 366-07-85 </a></span>
+                        <span class="iconify" data-icon="icomoon-free:phone"></span><span><a href="tel:+89174065402">8 (917) 406-54-02</a></span>
                     </div>
                 </div>
             </div>
@@ -533,11 +533,11 @@
                     </div>
                     <div class="phone_numbers">
                         <img src="img/icons8_phone.svg" alt="">
-                        <p>Телефоны: <br> <span class="phone_number">8 (937) 366-07-85 <br>8 (917) 406-54-02</span></p>
+                        <p>Телефоны: <br> <span class="phone_number"> <a href="tel:+89373660785">8 (937) 366-07-85 </a><br><a href="tel:+89174065402">8 (917) 406-54-02</a></span></p>
                     </div>
                     <div class="email">
                         <img src="img/fluent_mail-24-regular.svg" alt="">
-                        <p>Эл. почта: <span>stk.proekt.ufa@gmail.com</span></p>
+                        <p>Эл. почта: <a href="mailto:stk.proekt.ufa@gmail.com"><span>stk.proekt.ufa@gmail.com</span></a></p>
                     </div>
                     <div class="clock">
                         <img src="img/Vector.svg" alt="">
